Fixed text alignment inside anchor button for mobile.

--- a/less/bin-menu-edit.less
+++ b/less/bin-menu-edit.less
@@ -32,7 +32,9 @@ body {
             margin: 0;
             .btn {
               margin: 0;
+              padding: 6px 12px;
               height: @cm-total-height - @cm-border-bottom-height;
+              line-height: @cm-total-height - @cm-border-bottom-height - (2 * 6px);
               min-width: 80px;
               border-radius: 0;
               border-top: none;
